--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.17.1",
+    "firebase": "^10.13.1",
+    "node": "^22.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0"
+    "vite": "^4.5.3"
   }
 }
